--- a/src/assets/styles/base-style.scss
+++ b/src/assets/styles/base-style.scss
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+@import "~bootstrap/scss/bootstrap-grid";
 
 * {
   margin: 0;
@@ -16,6 +17,7 @@
   -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 html {
+  font-family: 'Montserrat', sans-serif;
   box-sizing: border-box;
   -webkit-text-size-adjust: 100%;
 }
