--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,9 +1,14 @@
-$color-black-01: #000000;
+$color-green-01: #70D24E;
+
+$border-color-01: #ffffff;
+
+$background-01: #2F2E2D;
+$background-02: #ffffff;
+$background-03: #F8F8F8;
 
 
 $animation-time-01: 0.15s;
 $animation-time-02: 0.2s;
-$animation-time-03: 0.3s;
 $animation-easing: cubic-bezier(0.5, 0, 0.5 ,1);
 
 $modal-box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
